adds stealing mechanic and refactoring of psps()

--- a/config.json
+++ b/config.json
@@ -6,6 +6,9 @@
       688022689994113047,
       412291532239142921
     ],
+    "thieves": {
+      "jas": "<:jas:1401671986626695178>"
+    },
     "vip": [
       729671721975545978,
       476491500461621261,
