adds creed's and wass's emotes

--- a/config.json
+++ b/config.json
@@ -7,7 +7,9 @@
       412291532239142921
     ],
     "thieves": {
-      "jas": "<:jas:1401671986626695178>"
+      "jas": "<:jas:1401671986626695178>",
+      "creed": "<:creed:1402701947512946789>",
+      "wass": "<:wass:1402701975367188581>"
     },
     "vip": [
       729671721975545978,
