update help message

--- a/config.json
+++ b/config.json
@@ -9,7 +9,8 @@
     "thieves": {
       "jas": "<:jas:1401671986626695178>",
       "creed": "<:creed:1402701947512946789>",
-      "wass": "<:wass:1402701975367188581>"
+      "wass": "<:wass:1402701975367188581>",
+      "moonie": "<:moonie:1402790093353390210>"
     },
     "vip": [
       729671721975545978,
