--- a/config.json
+++ b/config.json
@@ -6,12 +6,6 @@
       688022689994113047,
       412291532239142921
     ],
-    "thieves": {
-      "jas": "<:jas:1401671986626695178>",
-      "creed": "<:creed:1402701947512946789>",
-      "wass": "<:wass:1402701975367188581>",
-      "moonie": "<:moonie:1402790093353390210>"
-    },
     "vip": [
       729671721975545978,
       476491500461621261,
@@ -21,6 +15,21 @@
       662733222903414826,
       1084257450846343209
     ]
+  },
+  "emotes": {
+    "thieves": {
+       "jas": "<:jas:1401671986626695178>",
+      "creed": "<:creed:1402701947512946789>",
+      "wass": "<:wass:1402701975367188581>",
+      "moonie": "<:moonie:1402790093353390210>",
+      "funne": "<:funne:1410555163252363284>"
+    },
+    "leaderboard": {
+      "gifted": "<:gifted:1410564494869925999>",
+      "peeps": "<:peeps:1410564594094702593>",
+      "received": "<:received:1410564653863403580>",
+      "tries": "<:tries:1410564740052418560>"
+    }
   },
   "embed_color": 13421823,
   "file_paths": {
