adds count of stolen peeps

--- a/config.json
+++ b/config.json
@@ -15,6 +15,33 @@
     "vup": [
       662733222903414826,
       1084257450846343209
+    ],
+    "thieves": [
+      {
+        "name": "jas",
+        "emote": "<:jas:1401671986626695178>",
+        "id": 476491500461621261
+      },
+      {
+        "name": "creed",
+        "emote": "<:creed:1402701947512946789>",
+        "id": 412291532239142921
+      },
+      {
+        "name": "wass",
+        "emote": "<:wass:1402701975367188581>",
+        "id": 695364794185941113
+      },
+      {
+        "name": "moonie",
+        "emote": "<:moonie:1402790093353390210>",
+        "id": 401785087064014850
+      },
+      {
+        "name": "funne",
+        "emote": "<:funne:1410555163252363284>",
+        "id": 688022689994113047
+      }
     ]
   },
   "emotes": {
